// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordInput > always sets spellcheck and autocapitalize off, regardless of other props 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        required=""
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > applies a max-width for a fixed width 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 11.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > applies a width for a fluid width 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 50%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > defaults autocomplete to current-password but allows an override 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > defaults autocomplete to current-password but allows an override 2`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="new-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > forwards arbitrary passthrough props onto the input 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        disabled=""
        id="password"
        name="password"
        placeholder="Enter password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > marks the root wrapper with data-component="input" 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > masks the password again when the toggle is clicked a second time 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > merges a consumer className onto the root wrapper 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7 extra-class"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > merges width styles with an explicit style prop 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="color: red; width: 100%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > preserves consumer-provided aria-describedby 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_hint_9056a7"
      id="password-hint"
    >
      At least 8 characters
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="custom-description password-hint"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders a hint 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_hint_9056a7"
      id="password-hint"
    >
      At least 8 characters
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-hint"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders an empty error message when error is set without errorMessage 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_error_9056a7"
      id="password-error"
    />
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-error"
        aria-invalid="true"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7 _fieldError_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders an error message 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_error_9056a7"
      id="password-error"
    >
      Enter your password
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-error"
        aria-invalid="true"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7 _fieldError_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders masked by default with a "Show" toggle 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders no label element when label is null 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 2 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 2.75em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 3 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 3.75em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 4 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 4.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 5 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 5.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 10 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 11.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 20 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 20.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the 30 width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="max-width: 29.5em;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the full width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 100%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the one-half width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 50%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the one-quarter width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 25%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the one-third width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 33.3333%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the three-quarters width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 75%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > renders the two-thirds width variant 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        style="width: 66.6667%;"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > reveals the password when the toggle is clicked 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="text"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is visible
      </div>
      <button
        aria-controls="password"
        aria-label="Hide password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Hide
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > stacks hint and error message ids in aria-describedby 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <p
      class="_hint_9056a7"
      id="password-hint"
    >
      At least 8 characters
    </p>
    <p
      class="_error_9056a7"
      id="password-error"
    >
      Enter your password
    </p>
    <div
      class="_wrapper_9056a7"
    >
      <input
        aria-describedby="password-hint password-error"
        aria-invalid="true"
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7 _fieldError_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordInput > uses the NDS inverse button variant for the toggle 1`] = `
<DocumentFragment>
  <div
    class="_input_9056a7"
    data-component="input"
  >
    <label
      class="_label_9056a7"
      for="password"
    >
      Password
    </label>
    <div
      class="_wrapper_9056a7"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="_field_9056a7"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="visually-hidden"
      >
        Your password is hidden
      </div>
      <button
        aria-controls="password"
        aria-label="Show password"
        class="btn btn--inverse _toggle_9056a7"
        data-component="button--inverse--button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</DocumentFragment>
`;
